# dildin-build-control

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dildin_Build_Control_Full_TZ_v3_0.docx  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+2 more)
docs/: ARCHITECTURE.md  CLI_ADAPTERS_TZ.md  DBC_Production_User_Guide_RU.docx  DBC_Testing_And_Methodology_Guide_RU.docx  DBC_USER_GUIDE_RU.md  DBC_User_Guide_RU.docx  GOOD_FIRST_ISSUES.md  INSTALL.md  LAUNCH_POSTS.md  LOOP_ENGINEERING_MANIFESTO.md  ROADMAP.md  cli-profiles.example.yaml
scripts/: approval-ledger.mjs  approval-queue.mjs  compare-real-micro.mjs  controlled-smoke.mjs  evidence-summary.mjs  guided-run-smoke.mjs  launch-doctor.mjs  loop-state-machine.mjs  operator-approve.mjs  operator-checklist.mjs  provider-contracts.mjs  provider-profile.mjs  provider-sessions.mjs  real-micro-plan.mjs  real-micro-preflight.mjs  real-micro-runbook.mjs  real-readiness.mjs  release-check.mjs  release-package.mjs  revert-evidence.mjs  run-journal.mjs  support-bundle.mjs  system-audit.mjs  task-intake.mjs
src/: App.tsx  cliContracts.ts  data.ts  storage.ts  styles.css  tauriBridge.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: harness.rs  main.rs
tools/: build_dbc_production_user_guide_docx.py  build_dbc_testing_methodology_docx.py  build_dbc_user_guide_docx.py  generate_app_icon.py
(+14 files in other folders)
